# Plataforma-Inteligente-para-Alcaldias-PIA-

./: .env.example  .gitignore  ADR-0001.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml  folder_structure.txt
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260701_0001_kernel_core.py  20260701_0002_documents_knowledge.py  20260701_0003_users_rbac.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: __init__.py  router.py
apps/api/app/api/v1/endpoints/: health.py  version.py
apps/api/app/core/: __init__.py  config.py  database.py  lifespan.py  logging.py  security.py
apps/api/app/modules/: __init__.py
apps/api/app/modules/audit/: README.md  __init__.py
apps/api/app/modules/audit/api/: __init__.py
apps/api/app/modules/audit/application/: __init__.py
apps/api/app/modules/audit/domain/: __init__.py  entities.py  models.py  repositories.py
apps/api/app/modules/audit/infrastructure/: __init__.py  models.py  repositories.py  repository.py
apps/api/app/modules/audit/tests/: __init__.py
apps/api/app/modules/auth/: README.md
apps/api/app/modules/auth/api/: __init__.py  dependencies.py  router.py  schemas.py
apps/api/app/modules/auth/application/: __init__.py  service.py
apps/api/app/modules/departments/: README.md  __init__.py
apps/api/app/modules/documents/: README.md  __init__.py
apps/api/app/modules/knowledge/: README.md  __init__.py
apps/api/app/modules/municipalities/: README.md  __init__.py
apps/api/app/modules/permissions/: README.md  __init__.py
apps/api/app/modules/roles/: README.md  __init__.py
apps/api/app/modules/users/: README.md  __init__.py
apps/api/app/shared/: __init__.py  exceptions.py  responses.py
apps/api/tests/: __init__.py  conftest.py  test_auth.py  test_documents_knowledge.py  test_health.py  test_kernel.py  test_kernel_core.py  test_users_rbac.py
docs/: README.md
(+121 files in other folders)
