[project]
name = "pia-api"
version = "0.1.0"
description = "Backend API for Plataforma Inteligente para Alcaldias"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "email-validator>=2.2,<3",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "pyjwt>=2.10,<3",
    # pwdlib provides a small modern API and Argon2 recommended password hashes.
    "pwdlib[argon2]>=0.2,<1",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "mypy>=1.14,<2",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "alembic.*"
disallow_untyped_decorators = false
